--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,8 @@ edition = "2018"
 hyper = { version = "0.10", default-features = false }
 mime = "0.2"
 httparse = "1.3"
-tempdir = "0.3"
 textnonce = "1.0"
 log = "0.4"
 encoding = "0.2"
 buf-read-ext = "0.4"
+tempfile = "3.4.0"
